fix: 链接不能跳转问题

--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -62,60 +62,74 @@
               <div class="panel-body">
                 <ul class="index-list-3YHFF clearfix systemList" style="margin-top: 0px;">
                   <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/partyManageSystem.png">
-                    </div>
-                    <div>
-                      <span class="ellipsis">党务管理系统</span>
-                    </div>
+                    <a href="https://uems-443.webvpn.sysu.edu.cn/party" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/partyManageSystem.png">
+                      </div>
+                      <div>
+                        <span class="ellipsis">党务管理系统</span>
+                      </div>
+                    </a>
                   </li>
                   <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/leaveSchoolSystem.png">
-                    </div>
-                    <div>
-                      <span class="ellipsis">离校管理系统</span>
-                    </div>
+                    <a href="https://ecampus.webvpn.sysu.edu.cn/lxxt/" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/leaveSchoolSystem.png">
+                      </div>
+                      <div>
+                        <span class="ellipsis">离校管理系统</span>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- <li class="systemList-item">
+                    <a src="https://usc.sysu.edu.cn/zs_portal/index" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/healthReport.png">
+                      </div>
+                      <div>
+                        <span class="ellipsis">学生健康申报</span>
+                      </div>
+                    </a>
+                  </li> -->
+                  <li class="systemList-item">
+                    <a href="https://usc.sysu.edu.cn" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/serviceCenter.png">
+                      </div>
+                      <div class="system-text">
+                        <span class="ellipsis">大学服务中心</span>
+                      </div>
+                    </a>
                   </li>
                   <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/healthReport.png">
-                    </div>
-                    <div>
-                      <span class="ellipsis">学生健康申报</span>
-                    </div>
+                    <a href="https://xgxt.sysu.edu.cn/" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/studentWorkManage.png">
+                      </div>
+                      <div class="system-text">
+                        <span class="ellipsis">学生工作管理平台（PC版）</span>
+                      </div>
+                    </a>
                   </li>
                   <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/serviceCenter.png">
-                    </div>
-                    <div class="system-text">
-                      <span class="ellipsis">大学服务中心</span>
-                    </div>
+                    <a href="https://jwxt.sysu.edu.cn/" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/jwxt.png">
+                      </div>
+                      <div class="system-text">
+                        <span class="ellipsis">本科教务管理系统丨学生</span>
+                      </div>
+                    </a>
                   </li>
                   <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/studentWorkManage.png">
-                    </div>
-                    <div class="system-text">
-                      <span class="ellipsis">学生工作管理平台（PC版）</span>
-                    </div>
-                  </li>
-                  <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/jwxt.png">
-                    </div>
-                    <div class="system-text">
-                      <span class="ellipsis">本科教务管理系统丨学生</span>
-                    </div>
-                  </li>
-                  <li class="systemList-item">
-                    <div class="img-circle">
-                      <img class="system-icon" src="./assets/mySysu.png">
-                    </div>
-                    <div class="system-text">
-                      <span class="ellipsis">我的中大</span>
-                    </div>
+                    <a href="https://my.webvpn.sysu.edu.cn" target="__black">
+                      <div class="img-circle">
+                        <img class="system-icon" src="./assets/mySysu.png">
+                      </div>
+                      <div class="system-text">
+                        <span class="ellipsis">我的中大</span>
+                      </div>
+                    </a>
                   </li>
                 </ul>
               </div>
