--- a/frontend/club&activity/index.html
+++ b/frontend/club&activity/index.html
@@ -52,11 +52,11 @@
 
         <div class="activityInfo">
             <p class="activInfoblock" id="activHeading">活动信息</p>
-            <p class="activInfoblock" id="activInfo1">第一个社团活动</p>
-            <p class="activInfoblock" id="activInfo2">第二个社团活动</p>
-            <p class="activInfoblock" id="activInfo3">第三个社团活动</p>
-            <p class="activInfoblock" id="activInfo4">第四个社团活动</p>
-            <p class="activInfoblock" id="activInfo5">第五个社团活动</p>
+            <p class="activInfoblock" id="activInfo1">暑期支教项目</p>
+            <p class="activInfoblock" id="activInfo2">宝洁英才节</p>
+            <p class="activInfoblock" id="activInfo3">冬至雅集</p>
+            <p class="activInfoblock" id="activInfo4">金字塔学社沙龙</p>
+            <p class="activInfoblock" id="activInfo5">诗生活</p>
             <div id="activbuttonBox">
                 <button id="activbutton">查看更多</button>
             </div>
