--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>BCCSchool</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
+    <link 
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
   </head>
@@ -50,12 +56,13 @@
       <div class="home-content">
         <section class="introduction">
           <div class="jumbotron">
-            <h1>BCCSchool</h1>
+            <h1 class="animate__animated animate__bounce">BCCSchool</h1>
             <p>充分利用学校网络与信息技术中心的资源优势，结合校内各门户网站、管理系统、教学科研协作应用平台内容、打破信息壁垒、实现数据共享、便捷师生查询、助力教学科研，为中大师生提供一站式的智慧校园服务。</p>
-            <p><a class="btn btn-primary btn-lg" target="__black" href="https://github.com/BCCUnion/BCCSchool" role="button">Learn more</a></p>
+            <p><a class="btn btn-primary btn-lg" target="__black" href="https://github.com/BCCUnion/BCCSchool" role="button">了解更多</a></p>
           </div>
         </section>
-        <div class="service-cards-container">
+        <div class="mid-label">我们提供</div>
+        <!-- <div class="service-cards-container">
           <section>
             <div class="panel panel-default">
               <div class="panel-heading">常用站点</div>
@@ -81,16 +88,6 @@
                       </div>
                     </a>
                   </li>
-                  <!-- <li class="systemList-item">
-                    <a src="https://usc.sysu.edu.cn/zs_portal/index" target="__black">
-                      <div class="img-circle">
-                        <img class="system-icon" src="./assets/healthReport.png">
-                      </div>
-                      <div>
-                        <span class="ellipsis">学生健康申报</span>
-                      </div>
-                    </a>
-                  </li> -->
                   <li class="systemList-item">
                     <a href="https://usc.sysu.edu.cn" target="__black">
                       <div class="img-circle">
@@ -134,14 +131,32 @@
                 </ul>
               </div>
             </div>
-            <!-- <div class="panel panel-default">
-              <div class="panel-heading">中大校历</div>
-              <div class="panel-body">
-                <div class="school-calendar">
-                  <img src="assets/schoolCalendar.jpg">
-                </div>
-              </div>
-            </div> -->
+          </section>
+        </div> -->
+        <div class="service-area">
+          <section class="service-container0">
+            <div class="service-item service0 animate__animated">
+              <p class="service-describe">最新、最及时的中大新闻资讯、学术成果、重要通知，助您快速获取想要了解的信息</p>
+              <img src="assets/function4.jpg">          
+            </div>
+          </section>
+          <section class="service-container1">
+            <div class="service-item service1 animate__animated">
+              <img src="assets/function3.jpg">
+              <p class="service-describe">最全、最准确的中大各大官方站点导航，助您高效办理各项大小事务</p>
+            </div>
+          </section>
+          <section class="service-container2">
+            <div class="service-item service2 animate__animated">
+              <p class="service-describe">最广、最准确的中大周边地标定位，助您在中大永不迷路</p>
+              <img src="assets/function2.jpg">  
+            </div>
+          </section>
+          <section class="service-container3">
+            <div class="service-item service3 animate__animated">
+              <img src="assets/function1.jpg">
+              <p class="service-describe">最全、最有用的微信公众号大全，助您学习、生活两不误</p>
+            </div>
           </section>
         </div>
       </div>
@@ -156,5 +171,6 @@
       </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
