--- a/frontend/public/public.html
+++ b/frontend/public/public.html
@@ -36,7 +36,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    <img class="avatar" src="./img/avatar.png"><span class="caret"></span>
+                    <img class="avatar" src="./img/avatar.png" alt=""><span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
                     <li><a href="#">个人设置</a></li>
@@ -144,7 +144,7 @@
 	<footer class="home-footer">
         <p>中山大学 © 2020 | 技术支持：BCCShool 
           <button type="button" class="btn btn-default btn-xs">
-            <a target="__black" href="https://github.com/BCCUnion/BCCSchool">
+            <a target="_blank" href="https://github.com/BCCUnion/BCCSchool">
               <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
             </a>
           </button>
