--- a/frontend/SchoolPlace/schoolPlace/index.html
+++ b/frontend/SchoolPlace/schoolPlace/index.html
@@ -21,21 +21,24 @@
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-              <a class="navbar-brand logo" href="#">
+              <a class="navbar-brand logo" href="/BCCSchool/frontend/main">
                 <img alt="Brand" src="./assets/logo.png">
               </a>
-              <span class="navbar-brand text">BCCSchool</span>
+			  <a href="/BCCSchool/frontend/main">
+			    <span class="navbar-brand text">BCCSchool</span>
+			  </a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav menu">
-                <li class="active menu-item"><a href="#"> 主页 <span class="sr-only">(current)</span></a></li>
-                <li class="menu-item"><a href="#">新闻公告</a></li>
-                <li class="menu-item"><a href="#">站点导航</a></li>
-                <li class="menu-item"><a href="#">生活服务</a></li>
-                <li class="menu-item"><a href="#">社团服务</a></li>
-                <li class="menu-item"><a href="#">地图服务</a></li>
+                <li class="active menu-item"><a href="#"> 主页 </a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/Consulting">新闻公告</a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/Website">站点导航</a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/public">生活服务</a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/clib&activity">社团服务</a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/SchoolPlace/schoolPlace/index.html">校内导航</a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/entertainment">周边导航</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
