--- a/frontend/Consulting/index.html
+++ b/frontend/Consulting/index.html
@@ -86,13 +86,13 @@ function switchMeiti(sysunews,newslist)
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav menu">
-                <li class="menu-item"><a href="/BCCSchool/frontend/main">主页</a></li>
-                <li class="active menu-item"><a href="#">新闻公告<span class="sr-only">(current)</span></a></li>
-                <li class="menu-item"><a href="/BCCSchool/frontend/Website">站点导航</a></li>
-                <li class="menu-item"><a href="/BCCSchool/frontend/public">生活服务</a></li>
-                <li class="menu-item"><a href="/BCCSchool/frontend/clib&activity">社团服务</a></li>
-                <li class="menu-item"><a href="/BCCSchool/frontend/SchoolPlace">校内导航</a></li>
-                <li class="menu-item"><a href="/BCCSchool/frontend/entertainment">周边导航</a></li>
+				    <li class="active menu-item"><a href="#"> 主页 </a></li>
+				    <li class="menu-item"><a href="/BCCSchool/frontend/Consulting">新闻公告</a></li>
+				    <li class="menu-item"><a href="/BCCSchool/frontend/Website">站点导航</a></li>
+				    <li class="menu-item"><a href="/BCCSchool/frontend/public">生活服务</a></li>
+				    <li class="menu-item"><a href="/BCCSchool/frontend/community">社团服务</a></li>
+				    <li class="menu-item"><a href="/BCCSchool/frontend/SchoolPlace">校内导航</a></li>
+				    <li class="menu-item"><a href="/BCCSchool/frontend/entertainment">周边导航</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
