--- a/frontend/SchoolPlace/index.html
+++ b/frontend/SchoolPlace/index.html
@@ -36,7 +36,7 @@
                 <li class="menu-item"><a href="/BCCSchool/frontend/Consulting">新闻公告</a></li>
                 <li class="menu-item"><a href="/BCCSchool/frontend/Website">站点导航</a></li>
                 <li class="menu-item"><a href="/BCCSchool/frontend/public">生活服务</a></li>
-                <li class="menu-item"><a href="/BCCSchool/frontend/clib&activity">社团服务</a></li>
+                <li class="menu-item"><a href="/BCCSchool/frontend/community">社团服务</a></li>
                 <li class="active menu-item"><a href="/BCCSchool/frontend/SchoolPlace">校内导航</a></li>
                 <li class="menu-item"><a href="/BCCSchool/frontend/entertainment">周边导航</a></li>
               </ul>
